resized deeplabcut video for project

--- a/index.html
+++ b/index.html
@@ -910,11 +910,11 @@
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
-                  
-                  <img src="./assets/images/deeplabcut-face.webp" alt="Deeplabcut labelling of facial features" loading="lazy">
+
+                  <img src="./assets/videos/deeplabcut-face.webp" alt="Classification of Facial Features to Odorants" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">DeepLabCut</h3>
+                <h3 class="project-title">Classification of Facial Features to Odorants</h3>
 
                 <p class="project-category">Data Analysis</p>
 
