added more stuff to portfolio

--- a/index.html
+++ b/index.html
@@ -844,7 +844,7 @@
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Side Projects</button>
+              <button data-filter-btn>Under construction - more to be added!</button>
             </li>
 
           </ul>
@@ -876,8 +876,9 @@
               </li>
 
               <li class="select-item">
-                <button data-select-item>Side Projects</button>
+                <button data-select-item>Under construction - more to be added!</button>
               </li>
+
 
             </ul>
 
@@ -893,10 +894,10 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-1.jpg" alt="finance" loading="lazy">
+                  <img src="./assets/videos/observatory_neutral.webp" alt="Observatory" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Finance</h3>
+                <h3 class="project-title">Mice Observatory - a platform to investigate multiple dimensions of mice behavior</h3>
 
                 <p class="project-category">Behaviour Setups</p>
 
@@ -921,7 +922,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="side projects">
+            <li class="project-item  active" data-filter-item data-category="data analysis">
               <a href="#">
 
                 <figure class="project-img">
@@ -929,12 +930,12 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-3.jpg" alt="fundo" loading="lazy">
+                  <img src="./assets/videos/moseq_video.webp" alt="fundo" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Fundo</h3>
+                <h3 class="project-title">Extraction of behavioral motifs with Moseq</h3>
 
-                <p class="project-category">Side Projects</p>
+                <p class="project-category">Data Analysis</p>
 
               </a>
             </li>
