edited observatory description

--- a/index.html
+++ b/index.html
@@ -897,7 +897,7 @@
                   <img src="./assets/videos/observatory_neutral.webp" alt="Observatory" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Mice Observatory - a platform to investigate multiple dimensions of mice behavior</h3>
+                <h3 class="project-title">Observatory - multi-dimensional characterization of mice behavior</h3>
 
                 <p class="project-category">Behaviour Setups</p>
 
