update website description

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         <div class="info-content">
           <h1 class="name" title="Shawn Tan">Shawn Tan</h1>
 
-          <p class="title">Freelance Postdoc.</p>
-          <p class="title">Data Scientist.</p>
+          <p class="title">Freelance Scientist.</p>
+          <p class="title">Data Hacker.</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -190,7 +190,7 @@
           </p>
 
           <p>
-            In my spare time, I also like to play with data and am proficient in statistics, coding, data science and machine learning (3+years experience with Python/Pandas/Scikit-learn/etc).
+            In my spare time, I also like to tinker with data and am proficient in statistics, coding, data science and machine learning (4+years experience with Python/Pandas/Scikit-learn/etc).
             Check out the other tabs to take a look at some of my past projects!
           </p>
         </section>
