--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
           </p>
 
           <p>
-            In my spare time, I also like to tinker with data and am proficient in statistics, coding, data science and machine learning (4+years experience with Python/Pandas/Scikit-learn/etc).
+            In my spare time, I tinker with data and am proficient in statistics, coding, data science and machine learning (4+years experience with Python/Pandas/Scikit-learn/etc).
             Check out the other tabs to take a look at some of my past projects!
           </p>
         </section>
