--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         <div class="info-content">
           <h1 class="name" title="Shawn Tan">Shawn Tan</h1>
 
-          <p class="title">Freelance Scientist.</p>
-          <p class="title">Data Hacker.</p>
+          <p class="title">Neuroscientist</p>
+          
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
