update coursera data science specialization

--- a/index.html
+++ b/index.html
@@ -788,9 +788,9 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Applied Machine Learning in Python</h4>
+              <h4 class="h4 timeline-item-title">Applied Data Science with Python</h4>
 
-              <span>Coursera (University of Michigan) (2019)</span>
+              <span>Coursera (University of Michigan) (2021)</span>
 
             </li>
 
