--- a/index.html
+++ b/index.html
@@ -339,29 +339,54 @@
 
             <li class="timeline-item">
 
+              <h4 class="h4 timeline-item-title">Freelance Technical Writer</h4>
+
+              <span>NeuroGEARS Ltd Mar 2024 - Present</span>
+
+              <p class="timeline-text">
+                Write documentation, protocols, and tutorials to enhance user accessibility and engagement for Bonsai, an open-source software for constructing interactive systems for neuroscience experiments.
+              </p>
+              
+            </li>
+
+            <li class="timeline-item">
+
               <h4 class="h4 timeline-item-title">Postdoctoral Associate</h4>
 
               <span>The Scripps Research Institute 2019-2023</span>
 
               <p class="timeline-text">
-                • Consulted on and designed, setup custom hardware/software for assaying
-                mice behavioral responses for independent and collaborative team
-                projects, leading to 1 publication in a high impact journal (Nature).
+                • Conducted research into the neural circuits underlying olfaction-driven social behavior in mice.
               </p>
 
               <br>
 
               <p class="timeline-text">
-                • Setup new data analysis/machine learning pipelines for analyzing and
-                extracting insights from mice behavioral videos.
+                • Developed and implemented signal processing and data analysis methods for physiological signals (respiration, pupil dilation) to study state-dependent modulation of arousal.
               </p>
 
               <br>
 
               <p class="timeline-text">
-                • Performed stereotaxic surgery for craniotomy, virus injection and fiber
-                photometry/optogenetics/electrode implants to monitor and manipulate invivo
-                neural activity in mice.
+                • Setup and optimized machine learning pipelines for pose estimation and behavioral motif extraction to study postural and facial responses to olfactory stimuli.
+              </p>
+
+              <br>
+
+              <p class="timeline-text">
+                • Setup and optimized machine learning pipelines for pose estimation and behavioral motif extraction to study postural and facial responses to olfactory stimuli.
+              </p>
+
+              <br>
+
+              <p class="timeline-text">
+                • Performed stereotaxic surgery, craniotomy, virus injections, fiber photometry, and optogenetics to monitor and manipulate neural activity, investigating the neural mechanisms underlying sexual arousal.
+              </p>
+
+              <br>
+
+              <p class="timeline-text">
+                • Designed and consulted on custom hardware/software setups for behavior, contributing to collaborative projects and high impact publications.
               </p>
 
             </li>
@@ -373,22 +398,31 @@
               <span>DUKE-NUS Medical School 2011-2019</span>
 
               <p class="timeline-text">
-                • Utilized behavioral assays, in-situ hybridisation, drug dosing, immunohistochemstry, western blot, qPCR, confocal microscopy,
-                electrophysiology to investigate behavioral, molecular and cellular changes in transgenic mice models of human neuropsychiatric disorders.
+                • Conducted research into the mechanisms underlying neuropsychiatric disorders using environmental, cellular and transgenic mice models.
               </p>
 
               <br>
 
               <p class="timeline-text">
-                • Performed molecular cloning, tissue dissociation, primary mice neuron and hek293 cell culture, transfection and electroporation to knockdown and
-                overexpress transgenes to study cellular changes of transgene expression.
+                • Performed PCR, molecular cloning, HEK293 and neuronal cell culture, transient transfection, shRNA, lentivirus and AAV production to study disease mechanisms using transgene knockdown and over-expression.
               </p>
 
               <br>
 
               <p class="timeline-text">
-                • Published 2 first author and 3 collaborative publications with animal/cellular models of neuropsychiatric disorders in internationally recognized
-                journals.
+                • Utilized western blot, qPCR, confocal microscopy, immunohistochemstry, in-situ hybridization and electrophysiology to quantify disease phenotypes.
+              </p>
+
+              <br>
+
+              <p class="timeline-text">
+                • Characterized behavioral abnormalities in mice models using a wide panel of behavioral assays targeting sensory and motor function, cognition,  memory, social behaviors and neuropsychiatric phenotypes (anxiety/depression/schizophrenia/repetitive behaviors).
+              </p>
+
+              <br>
+
+              <p class="timeline-text">
+                • Published 2 first author and 3 collaborative publications in high impact journals and presented at international neuroscience conferences.
               </p>
 
             </li>
