fix layout errors in resume

--- a/index.html
+++ b/index.html
@@ -344,9 +344,9 @@
               <span>NeuroGEARS Ltd Mar 2024 - Present</span>
 
               <p class="timeline-text">
-                Write documentation, protocols, and tutorials to enhance user accessibility and engagement for Bonsai, an open-source software for constructing interactive systems for neuroscience experiments.
+                • Write documentation, protocols, and tutorials to enhance user accessibility and engagement for Bonsai, an open-source software for constructing interactive systems for neuroscience experiments.
               </p>
-              
+
             </li>
 
             <li class="timeline-item">
@@ -363,12 +363,6 @@
 
               <p class="timeline-text">
                 • Developed and implemented signal processing and data analysis methods for physiological signals (respiration, pupil dilation) to study state-dependent modulation of arousal.
-              </p>
-
-              <br>
-
-              <p class="timeline-text">
-                • Setup and optimized machine learning pipelines for pose estimation and behavioral motif extraction to study postural and facial responses to olfactory stimuli.
               </p>
 
               <br>
