expanded upon courses

--- a/index.html
+++ b/index.html
@@ -773,7 +773,9 @@
             <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">Introduction to Git and Github</h4>
-
+              <p class="timeline-text">
+              ~ 30 hour course covering version control, working with local and remote repositories, and best practices for online collaborations.
+              </p>
               <span>Coursera (Google) (2024)</span>
 
             </li>
@@ -784,22 +786,32 @@
 
               <span>Neuromatch Academy (2021)</span>
 
+              <p class="timeline-text">
+              ~ 120 hour intensive, interactive live course covering core topics in deep learning, including optimization, regularization, generative models, unsupervised and reinforcement learning using Pytorch.
+              </p>
+
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Applied Data Science with Python</h4>
+              <h4 class="h4 timeline-item-title">Applied Data Science with Python Specialization</h4>
 
               <span>Coursera (University of Michigan) (2021)</span>
+              
+              <p class="timeline-text">
+              ~ 160 hour course covering data processing, data visualization, statistical analysis and machine learning using Pandas, Matplotlib, Scikit-learn, NLTK and NetworkX pythons libraries.
+              </p>
 
             </li>
 
             <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">Fundamentals of Computing Specialization</h4>
-
+              
               <span>Coursera (Rice University) (2018)</span>
-
+              <p class="timeline-text">
+              ~ 80 hour course building on Python fundamentals and covering interactive programming, algorithimic thinking and object-oriented programming.
+              </p>
             </li>
 
             <li class="timeline-item">
@@ -807,6 +819,11 @@
               <h4 class="h4 timeline-item-title">Python for Everybody Specialization</h4>
 
               <span>Coursera (University of Michigan) (2018)</span>
+
+              <p class="timeline-text">
+                ~ 80 hour course covering fundamental Python programming concepts such as functions, data structures, and accessing networked application programming interfaces.
+              </p>
+  
 
             </li>
 
