--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 
               <h4 class="h4 timeline-item-title">Freelance Technical Writer</h4>
 
-              <span>NeuroGEARS Ltd Mar 2024 - Present</span>
+              <span>Client - NeuroGEARS Ltd Mar 2024 - Present</span>
 
               <p class="timeline-text">
                 • Write documentation, protocols, and tutorials to enhance user accessibility and engagement for Bonsai, an open-source software for constructing interactive systems for neuroscience experiments.
