Add lightweight GDPR compliant website tracker

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <title>Shawn Tan - Personal Portfolio</title>
 
   <!--
+  GDPR compliant lightweight tracker
+  -->
+  <script defer src="https://cloud.umami.is/script.js" data-website-id="1dffb2c0-b911-4a79-8863-2ddab8dc6181"></script>
+
+  <!--
     - favicon
   -->
   <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
