Rework opportunities section to services provided

--- a/index.html
+++ b/index.html
@@ -191,12 +191,11 @@
         <section class="about-text">
           <p>
             I am an experienced neuroscientist with a strong publication record and a background in molecular, cellular and systems neuroscience. 
-            I am versatile in a wide variety of traditional and cutting edge neuroscience techniques, including molecular biology, microscopy, animal behaviour, electrophysiology and optogenetics (10+years wet lab experience). 
+            I am versatile in a wide variety of traditional and cutting edge neuroscience techniques, including molecular biology, animal behaviour, electrophysiology and data analysis (12+years wet lab experience). 
           </p>
 
           <p>
-            In my spare time, I tinker with data and am proficient in statistics, coding, data science and machine learning (4+years experience with Python/Pandas/Scikit-learn/etc).
-            Check out the other tabs to take a look at some of my past projects!
+            I provide neuroscience technical consulting to academic and industry labs. I can provide on-site service within the San Diego area and off-site services for short or remote projects.
           </p>
         </section>
 
@@ -206,37 +205,21 @@
 
         <section class="service">
 
-          <h3 class="h3 service-title">Open to opportunities</h3>
+          <h3 class="h3 service-title">Services Provided</h3>
 
           <ul class="service-list">
 
             <li class="service-item">
 
               <div class="service-icon-box">
-                <ion-icon name="pulse-outline" size = large></ion-icon>
+                <ion-icon name="hardware-chip-outline" size = large></ion-icon>
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Field Application Scientist</h4>
+                <h4 class="h4 service-item-title">Bespoke Platforms</h4>
 
                 <p class="service-item-text">
-                 Imaging, electrophysiology, DNA sequencing.
-                </p>
-              </div>
-
-            </li>
-
-            <li class="service-item">
-
-              <div class="service-icon-box">
-                <ion-icon name="flask-outline" size = "large"></ion-icon>
-              </div>
-
-              <div class="service-content-box">
-                <h4 class="h4 service-item-title">Scientist</h4>
-
-                <p class="service-item-text">
-                  Industry science, in-vivo applications, mice models.
+                 Animal behavior, neural activity recordings.
                 </p>
               </div>
 
@@ -249,10 +232,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Consultancy</h4>
+                <h4 class="h4 service-item-title">Neuro Data Analysis</h4>
 
                 <p class="service-item-text">
-                  Bespoke behavioral platforms, data analysis.
+                  Behavioral metrics, physiological measures, neural activity.
                 </p>
               </div>
 
@@ -268,7 +251,23 @@
                 <h4 class="h4 service-item-title">Technical Writing</h4>
 
                 <p class="service-item-text">
-                  Life science applications, open source platforms.
+                  Open source life science applications.
+                </p>
+              </div>
+
+            </li>
+
+            <li class="service-item">
+
+              <div class="service-icon-box">
+                <ion-icon name="flask-outline" size = "large"></ion-icon>
+              </div>
+
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Contract Research</h4>
+
+                <p class="service-item-text">
+                  Stereotaxic surgery, electrophysiology.
                 </p>
               </div>
 
