Polished text in introduction

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="info-content">
           <h1 class="name" title="Shawn Tan">Shawn Tan</h1>
 
-          <p class="title">Neuroscientist</p>
+          <p class="title">Neuroscience Consultant</p>
           
         </div>
 
@@ -135,10 +135,6 @@
 
     </aside>
 
-
-
-
-
     <!--
       - #main-content
     -->
@@ -190,12 +186,12 @@
 
         <section class="about-text">
           <p>
-            I am an experienced neuroscientist with a strong publication record and a background in molecular, cellular and systems neuroscience. 
-            I am versatile in a wide variety of traditional and cutting edge neuroscience techniques, including molecular biology, animal behaviour, electrophysiology and data analysis (12+years wet lab experience). 
+            I am an experienced neuroscientist with over 12 years of expertise in molecular, cellular, and systems neuroscience.
+            My skill set spans a wide range of traditional and cutting-edge techniques, including molecular biology, animal behavior, electrophysiology, and data analysis. 
           </p>
 
           <p>
-            I provide neuroscience technical consulting to academic and industry labs. I can provide on-site service within the San Diego area and off-site services for short or remote projects.
+            I provide on-site services within the San Diego area, can travel to off-site locations for short-term projects, and offer remote services worldwide. For more information or collaboration opportunities, please feel free to contact me.
           </p>
         </section>
 
@@ -251,7 +247,7 @@
                 <h4 class="h4 service-item-title">Technical Writing</h4>
 
                 <p class="service-item-text">
-                  Open source life science applications.
+                  Open-source tools for life sciences.
                 </p>
               </div>
 
