Restore accidentally deleted sentence in introduction

--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@
           </p>
 
           <p>
-            I provide on-site services within the San Diego area, can travel to off-site locations for short-term projects, and offer remote services worldwide. For more information or collaboration opportunities, please feel free to contact me.
+            I provide neuroscience technical consulting to academic and industry labs.
+            I can travel to on-site locations within the San Diego area, off-site locations for short-term projects, and offer remote services worldwide. For more information or collaboration opportunities, please feel free to contact me.
           </p>
         </section>
 
