Grammar and clarity edits to introduction

--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
           </p>
 
           <p>
-            I provide neuroscience technical consulting services to academic and industry labs.
-            I can travel to on-site locations within the San Diego area, off-site locations for short-term projects, and offer remote services worldwide. For more information or collaboration opportunities, please feel free to contact me.
+            I provide neuroscience technical consulting services to clients in academia and industry.
+            I can travel on-site to locations within San Diego or out of state for short-term projects. I also offer remote services worldwide. For more information or collaboration opportunities, please feel free to contact me.
           </p>
         </section>
 
