Minor edits to grammar and clarity

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Bespoke Platforms</h4>
+                <h4 class="h4 service-item-title">Custom Platform Development</h4>
 
                 <p class="service-item-text">
                  Animal behavior, neural activity recordings.
@@ -245,10 +245,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Technical Writing</h4>
+                <h4 class="h4 service-item-title">Support and Documentation</h4>
 
                 <p class="service-item-text">
-                  Open-source tools for life sciences.
+                  Open-source tools for neuroscience.
                 </p>
               </div>
 
@@ -261,10 +261,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Contract Research</h4>
+                <h4 class="h4 service-item-title">Others</h4>
 
                 <p class="service-item-text">
-                  Stereotaxic surgery, electrophysiology.
+                  Contract research, training.
                 </p>
               </div>
 
@@ -340,9 +340,9 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Freelance Technical Writer</h4>
+              <h4 class="h4 timeline-item-title">Consultant</h4>
 
-              <span>Client - NeuroGEARS Ltd Mar 2024 - Present</span>
+              <span>Client - NeuroGEARS Ltd (UK) Mar 2024 - Present</span>
 
               <p class="timeline-text">
                 • Write documentation, protocols, and tutorials to enhance user accessibility and engagement for Bonsai, an open-source software for constructing interactive systems for neuroscience experiments.
