--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Shawn Tan">Shawn Tan (Pang Hao)</h1>
+          <h1 class="name" title="Shawn Tan">Shawn Tan<br>(Pang Hao)</h1>
 
           <p class="title">Neuroscience Consultant</p>
           
