Limit scope of services

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="info-content">
           <h1 class="name" title="Shawn Tan">Shawn Tan<br>(Pang Hao)</h1>
 
-          <p class="title">Neuroscience Consultant</p>
+          <p class="title">Neuroscience Consultant/Contractor </p>
           
         </div>
 
@@ -264,7 +264,7 @@
                 <h4 class="h4 service-item-title">Others</h4>
 
                 <p class="service-item-text">
-                  Contract research, training.
+                  Workshops, training.
                 </p>
               </div>
 
