Amend job classification

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="info-content">
           <h1 class="name" title="Shawn Tan">Shawn Tan<br>(Pang Hao)</h1>
 
-          <p class="title">Neuroscience Consultant/Contractor </p>
+          <p class="title">Neuroscience Consultant <br> & Contractor</p>
           
         </div>
 
@@ -191,7 +191,7 @@
           </p>
 
           <p>
-            I provide neuroscience technical consulting services to clients in academia and industry.
+            I provide technical consulting services to clients in neuroscience.
             I can travel on-site to locations within San Diego or out of state for short-term projects. I also offer remote services worldwide. For more information or collaboration opportunities, please feel free to contact me.
           </p>
         </section>
@@ -264,7 +264,7 @@
                 <h4 class="h4 service-item-title">Others</h4>
 
                 <p class="service-item-text">
-                  Workshops, training.
+                  Workshops, specialized training.
                 </p>
               </div>
 
