--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="info-content">
           <h1 class="name" title="Shawn Tan">Shawn Tan<br>(Pang Hao)</h1>
 
-          <p class="title">Neuroscience Consultant <br> & Contractor</p>
+          <p class="title" style="text-align: center;">Neuroscience Consultant <br> & Contractor</p>
           
         </div>
 
