--- a/index.html
+++ b/index.html
@@ -345,7 +345,25 @@
               <span>Client - NeuroGEARS Ltd (UK) Mar 2024 - Present</span>
 
               <p class="timeline-text">
-                • Write documentation, protocols, and tutorials to enhance user accessibility and engagement for Bonsai, an open-source software for constructing interactive systems for neuroscience experiments.
+                • Create and update documentation, articles, and tutorials to enhance user accessibility and engagement for <a href="https://bonsai-rx.org/" target="_blank">Bonsai</a>, an open-source software for constructing interactive systems for neuroscience experiments.
+              </p>
+
+              <p class="timeline-text">
+                • Provide technical support for Bonsai users on community forums, helping them troubleshoot issues and optimize their experimental setups.
+              </p>
+
+              <p class="timeline-text">
+                • Contribute device tutorials for <a href="https://harp-tech.org/" target="_blank">Harp</a>, a cross-institutional collaboration to develop interoperability standards for neuroscience hardware and software.
+              </p>
+
+              <span>Client - University of California San Diego - Jan 2025 - Present</span>
+
+              <p class="timeline-text">
+                • Develop and maintain custom hardware and software solutions for neuroscience experiments for multiple research labs, accelerating research timelines and enhancing experimental capabilities.
+              </p>
+
+              <p class="timeline-text">
+                • Design modular Bonsai workflows to integrate diverse hardware components (cameras, sensors, stimulation devices) with easy to use graphical user interfaces, real-time experimental control, and synchronized data logging capabilities.
               </p>
 
             </li>
