Remove links to fix text formatting

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
               <span>Client - NeuroGEARS Ltd (UK) Mar 2024 - Present</span>
 
               <p class="timeline-text">
-                • Create and update documentation, articles, and tutorials to enhance user accessibility and engagement for <a href="https://bonsai-rx.org/" target="_blank">Bonsai</a>, an open-source software for constructing interactive systems for neuroscience experiments.
+                • Create and update documentation, articles, and tutorials to enhance user accessibility and engagement for Bonsai, an open-source software for constructing interactive systems for neuroscience experiments.
               </p>
 
               <p class="timeline-text">
@@ -353,7 +353,7 @@
               </p>
 
               <p class="timeline-text">
-                • Contribute device tutorials for <a href="https://harp-tech.org/" target="_blank">Harp</a>, a cross-institutional collaboration to develop interoperability standards for neuroscience hardware and software.
+                • Contribute device tutorials for Harp, a cross-institutional collaboration to develop interoperability standards for neuroscience hardware and software.
               </p>
 
               <span>Client - University of California San Diego - Jan 2025 - Present</span>
