Minor text formatting

--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
 
               <br>
 
-              <span>Client - University of California San Diego - Jan 2025 - Present</span>
+              <span>Client - University of California San Diego Jan 2025 - Present</span>
 
               <p class="timeline-text">
                 • Develop and maintain custom hardware and software solutions for neuroscience experiments for multiple research labs, accelerating research timelines and enhancing experimental capabilities.
