Add data analysis bullet point

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
               <span>Client - University of California San Diego Jan 2025 - Present</span>
 
               <p class="timeline-text">
-                • Develop and maintain custom hardware and software solutions for neuroscience experiments for multiple research labs, accelerating research timelines and enhancing experimental capabilities.
+                • Develop and maintain bespoke end-to-end hardware and software solutions for neuroscience experiments for multiple research labs, accelerating research timelines and enhancing experimental capabilities.
               </p>
 
               <br>
@@ -375,6 +375,10 @@
               </p>
 
               <br>
+
+              <p class="timeline-text">
+                • Engineer data analysis pipelines by integrating machine learning frameworks with custom analysis scripts, featuring comprehensive testing, validation and documentation.
+              </p>
 
             </li>
 
