--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
               <ion-icon name="briefcase-outline"></ion-icon>
             </div>
 
-            <h3 class="h3">Experience</h3>
+            <h3 class="h3">Current Experience</h3>
           </div>
 
           <ol class="timeline-list">
@@ -381,6 +381,22 @@
               </p>
 
             </li>
+
+          </ol>
+
+        </section>
+
+        <section class="timeline">
+
+          <div class="title-wrapper">
+            <div class="icon-box">
+              <ion-icon name="briefcase-outline"></ion-icon>
+            </div>
+
+            <h3 class="h3">Past Experience</h3>
+          </div>
+
+          <ol class="timeline-list">
 
             <li class="timeline-item">
 
@@ -453,8 +469,6 @@
               </p>
 
             </li>
-
-
 
           </ol>
 
