Add foundational C# certification

--- a/index.html
+++ b/index.html
@@ -849,6 +849,18 @@
 
             <li class="timeline-item">
 
+              <h4 class="h4 timeline-item-title">Foundational C# Certification</h4>
+
+              <span>Microsoft/FreeCodeCamp (2026)</span>
+
+              <p class="timeline-text">
+              ~ 50 hour course covering C# fundamentals
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
               <h4 class="h4 timeline-item-title">Introduction to Git and Github</h4>
 
               <span>Coursera (Google) (2024)</span>
